# campus_network_login

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: main.rs
