[package]
name = "campus_network_login"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["blocking", "gzip","rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "4.0"
log = "0.4"
simplelog = "0.12.0"

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'